# resumeassist

./: .gitignore  README.md
backend/: .env.example  README.md  docker-compose.yml  migrate_add_audio_columns.py  pyproject.toml
backend/agent/: factory.py  loop.py  profile.py  profile_loader.py  realtime_agent.py  state.py
backend/agent/context/: builder.py  compactor.py  skill_loader.py
backend/agent/llm/: base.py  events.py  factory.py
backend/api/: app.py  auth.py  chat.py  deps.py  github_analysis.py  jd_analysis.py  resume_analysis.py  schemas.py  sessions.py  tasks.py  ws.py
backend/config/: settings.py
backend/config/agents/: interviewer-behavior.yaml  jd-analyzer.yaml  (+6 more)
backend/docs/: agent_loop_instruction.md
backend/service/: resume_media.py  session_service.py  summary_utils.py  task_service.py
backend/tests/: test_analysis_pipeline.py  test_context.py  test_dashscope_realtime.py  test_db_models.py  test_finalize.py  test_integration.py  test_jd_analysis.py  test_llm_events.py  test_llm_subclasses.py  test_memory_store.py  test_mimo.py  test_multimodal.py  test_observability.py  test_openai_compatible.py  test_openai_realtime.py  test_profile_loader.py  test_react_agent.py  test_read_skill.py  test_realtime_agent.py  test_realtime_events.py  test_resume_analyze.py  test_resume_api.py  test_resume_context.py  test_resume_media.py  test_sandbox.py  test_save_real_question.py  test_session_store.py  test_tool_executor.py  test_tools_repo.py
backend/tool/: base.py  executor.py  registry.py  sandbox.py
backend/trace/: __init__.py  observability.py
(+100 files in other folders)
